--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ website: AyoAyco.com
 email: mail@ayoayco.com
 description: >- # this means to ignore newlines until "baseurl:"
     notes on technology and life
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ayoayco
 github_username:  ayoayco
