--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: Ayo Ayco
 website: AyoAyco.com
 email: mail@ayoayco.com
 description: >- # this means to ignore newlines until "baseurl:"
-    // on technology and life
+    // notes on technology and life
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ayoayco
@@ -38,6 +38,15 @@ defaults:
   values:
     layout: post
     author: Ayo
+
+# this goes inside _config.yml. Change as required
+navigation:
+- text: Home
+  url: /
+- text: About
+  url: /about/
+- text: Contact me
+  url: /contact-me/
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
