--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: ./notes.ayo
 author: Ayo Ayco
+attribution: "2018 &copy; by Ayo Ayco"
 website: AyoAyco.com
 email: mail@ayoayco.com
 description: >- # this means to ignore newlines until "baseurl:"
