ready for migrating to ayoayco.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: ./notes.ayo
+title: Ayo Ayco
 author: Ayo Ayco
 attribution: "2018 &copy; by Ayo Ayco"
 website: AyoAyco.com
 email: mail@ayoayco.com
 description: >- # this means to ignore newlines until "baseurl:"
     // notes on technology and life
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ayoayco
 github_username:  ayoayco
@@ -39,15 +39,16 @@ defaults:
   values:
     layout: post
     author: Ayo
+    excerpt_separator: <!--more-->
 
 # this goes inside _config.yml. Change as required
 navigation:
-- text: Home
+- text: Projects
   url: /
 - text: About
   url: /about/
-- text: Contact me
-  url: /contact-me/
+- text: Talks
+  url: /talks/
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
