--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Ayo Ayco
 author: Ayo Ayco
 attribution: "2018 &copy; by Ayo Ayco"
 website: AyoAyco.com
-email: ramon.aycojr@protonmail.com
+email: ramon [dot] aycojr [at] protonmail [dot] com
 description: >- # this means to ignore newlines until "baseurl:"
     // notes on technology and life
 baseurl: "/" # the subpath of your site, e.g. /blog
