--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Ayo Ayco
 author: Ayo Ayco
-attribution: "2018 &copy; by Ayo Ayco"
+attribution: "2021 &copy; by Ramon Ayco Jr"
 website: AyoAyco.com
 email: ramon.aycojr@pm.me
 description: >- # this means to ignore newlines until "baseurl:"
