--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ attribution: "2021 &copy; by Ramon Ayco Jr"
 website: ayco.io
 email: ramon.aycojr@pm.me
 description: >- # this means to ignore newlines until "baseurl:"
-    // notes on technology and life
+    Ayo Ayco is a Software Engineer from The Philippines, now in The Netherlands!
 baseurl: "/" # the subpath of your site, e.g. /blog
 google_analytics: 'UA-53021803-1'
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
