--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Ayo Ayco
 author: Ayo Ayco
 attribution: "2021 &copy; by Ayo Ayco"
 website: ayco.io
-email: ramon.aycojr@pm.me
+email: ramon.aycojr+web@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     Ayo Ayco is a Software Engineer from The Philippines, now in The Netherlands!
 baseurl: "/" # the subpath of your site, e.g. /blog
