announce new site

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Ayo Ayco
 author: Ayo Ayco
 attribution: "2021 &copy; by Ayo Ayco"
-website: ayco.io
+website: classic.ayco.io
 email: ayo@ayco.io
 description: >- # this means to ignore newlines until "baseurl:"
   Ayo Ayco is a Software Engineer from The Philippines, now in The Netherlands!
